First our faces, then the about text. Fixed word spacing for headers (Oswald)

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -123,6 +123,7 @@ body .wrapper:after {
 	padding-left: 20px;
 	line-height: 45px;
 	font-family: $oswald;
+	word-spacing: 4px;
 	font-size: 15px;
 	color: white;
 
